--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 input{
   border: solid .1px grey;
+  border-radius: .2rem;
+  padding:.1rem .5rem;
+}
+
+button{
+  padding: .3rem 1.5rem;
+  border-radius: .2rem;
+  color: white;
+}
+
+.bg-color1{
+  background-color: #535468
+}
+.bg-color2{
+  background-color: #3454DB
 }
